--- a/test/fixtures/bids.yml
+++ b/test/fixtures/bids.yml
@@ -2,10 +2,10 @@
 
 one:
   user_id: 
+  amount: 1.5
   auction_id: 
-  value: 1.5
 
 two:
   user_id: 
+  amount: 1.5
   auction_id: 
-  value: 1.5
